Really important update: bunch of stuff

--- a/app/src/content/blog/test.mdx
+++ b/app/src/content/blog/test.mdx
@@ -1,6 +1,10 @@
 ---
 title: Test Post
-author: deminearchiver
+authors:
+  - id: deminearchiver
+    name: deminearchiver
+    avatar:
+      src: ../../assets/images/avatars/deminearchiver.png
 createdAt: 2024-05-15
 ---
 
