--- a/app/src/content/blog/material-to-solid.mdx
+++ b/app/src/content/blog/material-to-solid.mdx
@@ -5,21 +5,11 @@ authors:
     name: deminearchiver
     avatar:
       src: ../../assets/images/avatars/deminearchiver.png
-  - id: deminearchiver
-    name: deminearchiver
-    avatar:
-      src: ../../assets/images/avatars/deminearchiver.png
-  - id: deminearchiver
-    name: deminearchiver
-    avatar:
-      src: ../../assets/images/avatars/deminearchiver.png
-  - id: deminearchiver
-    name: deminearchiver
-    avatar:
-      src: ../../assets/images/avatars/deminearchiver.png
-  - id: deminearchiver
-    name: deminearchiver
-    avatar:
-      src: ../../assets/images/avatars/deminearchiver.png
 createdAt: 2024-05-18
 ---
+
+import { Aside } from "../../components/aside";
+
+<Aside variant="caution">
+  This blog post is **WORK IN PROGRESS**. It may contain unfinished and inaccurate content.
+</Aside>
