--- a/app/src/content/blog/test.mdx
+++ b/app/src/content/blog/test.mdx
@@ -8,6 +8,12 @@ authors:
 createdAt: 2024-05-15
 ---
 
+import { Aside } from "../../components/aside";
+
+<Aside variant="caution">
+  This blog post is **A TEST POST**. It contains nonsense.
+</Aside>
+
 # Heading 1
 ## Heading 2
 ### Heading 3
@@ -26,6 +32,23 @@ Do ex qui nisi consequat et pariatur. Irure adipisicing aute aliquip voluptate i
 Voluptate et in aliqua proident amet et est reprehenderit. Culpa eu elit officia esse id quis. Anim ullamco Lorem aliquip ullamco ipsum ipsum. Non non veniam proident exercitation commodo occaecat.
 In pariatur proident consequat et nostrud magna nulla aute Lorem laborum quis ut. Exercitation amet reprehenderit cillum aliquip laborum Lorem elit sint veniam. Consectetur elit officia sunt veniam. Magna amet Lorem nulla sint nulla deserunt Lorem in minim dolor sint pariatur do.
 Irure enim esse aute officia dolore ipsum est sit non duis voluptate velit. Ex elit laboris eiusmod dolore eu nisi proident enim nisi. Lorem do irure est commodo. Culpa non adipisicing adipisicing occaecat pariatur eu veniam aliquip. Dolore officia labore ullamco cupidatat sunt.
+
+<Aside variant="note">
+  Do cillum ipsum ea quis minim. Occaecat anim anim consequat aliquip exercitation est. Non officia eu dolor veniam. Labore elit cupidatat in amet voluptate nisi est cillum nisi incididunt ipsum ea sint proident.
+</Aside>
+<Aside variant="tip">
+  Do cillum ipsum ea quis minim. Occaecat anim anim consequat aliquip exercitation est. Non officia eu dolor veniam. Labore elit cupidatat in amet voluptate nisi est cillum nisi incididunt ipsum ea sint proident.
+</Aside>
+<Aside variant="important">
+  Do cillum ipsum ea quis minim. Occaecat anim anim consequat aliquip exercitation est. Non officia eu dolor veniam. Labore elit cupidatat in amet voluptate nisi est cillum nisi incididunt ipsum ea sint proident.
+</Aside>
+<Aside variant="warning">
+  Do cillum ipsum ea quis minim. Occaecat anim anim consequat aliquip exercitation est. Non officia eu dolor veniam. Labore elit cupidatat in amet voluptate nisi est cillum nisi incididunt ipsum ea sint proident.
+</Aside>
+<Aside variant="caution">
+  Do cillum ipsum ea quis minim. Occaecat anim anim consequat aliquip exercitation est. Non officia eu dolor veniam. Labore elit cupidatat in amet voluptate nisi est cillum nisi incididunt ipsum ea sint proident.
+</Aside>
+
 
 ```astro title="Button.astro
 ---
