--- a/app/src/content/blog/astro-pagefind-solidjs.mdx
+++ b/app/src/content/blog/astro-pagefind-solidjs.mdx
@@ -1,11 +1,11 @@
 ---
-title: Integrating Pagefind into Astro with SolidJS
+title: Astro + Pagefind + Solid = 🤯
 authors:
   - id: deminearchiver
     name: deminearchiver
     avatar:
       src: ../../assets/images/avatars/deminearchiver.png
-createdAt: 2024-05-18
+createdAt: 2024-05-18 # Don't change! It's an actual creation date!
 ---
 
 import { Aside } from "../../components/aside";
