--- a/app/src/content/blog/astro-pagefind-solidjs.mdx
+++ b/app/src/content/blog/astro-pagefind-solidjs.mdx
@@ -12,10 +12,19 @@ createdAt: 2024-05-18 # Don't change! It's an actual creation date!
 import { Aside } from "../../components/aside";
 import { Button } from "../../components/button";
 
+import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
 import ReadMoreIcon from "~icons/material-symbols-rounded/read-more:outlined";
 
 <Aside variant="caution">
-  This blog post is **WORK IN PROGRESS**. It may contain unfinished and inaccurate content.
+  <>This blog post is **WORK IN PROGRESS**. It may contain unfinished and inaccurate content.</>
+  <Button
+    slot="action"
+    variant="filled"
+    class="not-content"
+    href="/blog">
+      <ArrowBackIcon slot="leading" width={18} height={18} />
+      <>Go back</>
+  </Button>
 </Aside>
 
 <Aside variant="note">
@@ -36,7 +45,7 @@ The above command will generate a `pagefind` directory in our `dist` folder. Thi
 
 Now that we know the basics, it's time to create the search UI!
 
-## Our stack
+### Our stack
 
 First, let's settle on **all** libraries we will use for building the search UI. I haven't included **Astro** in this list because the search UI will be able to be consumed outside of an Astro project.
 
@@ -57,22 +66,267 @@ yarn add -D @vanilla-extract/vite-plugin
 
 
 
-<Aside variant="tip">
-  <>If you want to be able to pass props to the underlying component, you can make use of `splitProps`.</>
+{/* <Aside variant="tip">
+  <>
+    If you want to be able to pass props to the underlying component, you can make use of `splitProps`:
+
+    ```tsx showLineNumbers=false
+    const [localProps, otherProps] = splitProps(
+      props,
+      ["class", "children"],
+    );
+    ```
+  </>
   <Button
     slot="action"
     variant="text"
     class="not-content"
     href="https://docs.solidjs.com/concepts/components/props/#splitprops"
     target="_blank">
-      <ReadMoreIcon slot="leading" />
+      <ReadMoreIcon slot="leading" width={18} height={18} />
       <>Learn more</>
   </Button>
-</Aside>
+</Aside> */}
 
-### Search dialog
+### Dialog
+
+Most websites implement their search UI as a modal dialog. That's what we'll do now.
+
+
+
+```tsx title="components/search/search.tsx"
+type SearchProps = {
+  children: JSX.Element;
+}
+
+export const Search: Component<SearchProps> = (props) => {
+  /*
+  We use a `<div>` instead of `<>` (fragment)
+  because we dont' want our dialog to appear outside of `<astro-island>`.
+  */
+  return (
+    <div>
+      <dialog>
+
+      </dialog>
+    </div>
+  );
+}
+```
 
 ### Animation
+
+You can skip this step if you don't wish to add animation to your dialog.
+
+
+
+```bash
+yarn add @solid-primitives/presence
+```
+
+```diff lang="tsx" title="components/search/search.tsx"
+import { createPresence } from "@solid-primitives/presence";
+
+export const Search: Component<SearchProps> = (props) => {
+  const {
+    isEntering,
+    isExiting,
+    isMounted
+  } = createPresence({
+    enterDuration: 600,
+    exitDuration: 300,
+  });
+
+  const openView = (event?: MouseEvent) => {
+    event?.preventDefault();
+  }
+  const closeView = () => {
+
+  }
+
+  createEffect<boolean>((prevMounted) => {
+    document.body.toggleAttribute("data-dialog-open", open());
+    if(isMounted() === prevMounted) return isMounted();
+    if(isMounted()) {
+      dialogRef.showModal();
+    }
+    else {
+      dialogRef.close();
+    }
+    return isMounted();
+  }, isMounted());
+
+  return (
+    <div>
+      {anchor()}
+      <dialog
+        onClick={event => {
+          const rect = event.currentTarget.getBoundingClientRect();
+          if (rect.left > event.clientX ||
+              rect.right < event.clientX ||
+              rect.top > event.clientY ||
+              rect.bottom < event.clientY
+          ) closeView();
+        }}
+        onCancel={closeView}>
+
+      </dialog>
+    </div>
+  )
+}
+```
+```diff lang="ts" title="components/search/search.css.ts"
+-import { style } from "@vanilla-extract/css";
++import { style, keyframes } from "@vanilla-extract/css";
+import { recipe } from "@vanilla-extract/recipes";
+
++const viewEnter = keyframes({
++  from: {
++    opacity: 0,
++    scale: 0.35,
++  },
++});
++const viewExit = keyframes({
++  to: {
++    opacity: 0,
++    scale: 0.35,
++  },
++});
+
+-export const searchViewStyle = style({
++export const searchViewStyle = recipe({
++  base: {
+// TODO: add base styles
++  },
++  variants: {
++    state: {
++      entering: {
++        animation: `${viewEnter} 600ms cubic-bezier(0.05, 0.7, 0.1, 1.0) forwards`,
++      },
++      exiting: {
++        animation: `${viewExit} 300ms 	cubic-bezier(0.3, 0.0, 0.8, 0.15) forwards`,
++      },
++    }
++  },
+});
+```
+
+### Adding a responsive anchor
+
+Now that our search UI is fully working, all that's left to do is to use it, right? Well, not quite. Remember how we must pass a search anchor to our component? Even though is anchor can be any clickable HTML element, I think it would be good for us to make a responsive search anchor.
+
+We will have our component have 3 different states:
+- Search icon button - **smallest**
+- Search button with label - **medium**
+- Search bar - **largest**
+
+If you feel like the *medium* state is unnecessary, you can skip it, but I will show you how to make it just to demonstrate the use of adaptive breakpoints.
+
+Since our UI design is based on [**Material You**](https://m3.material.io/), it's a good idea to keep the style consistent and use Material's official specifications for our anchor components:
+- [Icon Buttons - **Filled tonal**](https://m3.material.io/components/icon-buttons/specs/#c2ca424b-2ad7-40e6-8946-47fb1918060a)
+- [Common Buttons - **Filled tonal**](https://m3.material.io/components/buttons/specs/#158f0a18-67fb-4ac4-9d22-cc4d1adc4579)
+- [Search - **Search bar**](https://m3.material.io/components/search/specs/#2b4626d7-c5e6-4f2e-8f32-1a1643978512)
+
+Here are the three components:
+
+#### Search bar
+
+```tsx title="components/search/search-bar.tsx"
+import {} from "./search-bar.css";
+
+export const SearchBar: Component = () => {
+  return (
+
+  );
+}
+```
+
+```ts title="components/search/search-bar.css.ts"
+```
+
+#### Search icon
+
+```tsx title="components/search/search-icon.tsx"
+export const SearchIcon: Component = () => {
+  return (
+
+  );
+}
+```
+
+
+Finally, it's time to unite all those 3 components into one. We'll call it `SearchAnchor`.
+
+```tsx title="components/search/search-anchor.tsx"
+import { type Component, type JSX, Switch, Match, createMemo } from "solid-js";
+import { createMediaQuery } from "@solid-primitives/media";
+
+import { SearchIcon } from "./search-icon";
+import { SearchButton } from "./search-button";
+import { SearchBar } from "./search-bar";
+
+export type SearchAnchorProps = {
+  variant?: "icon" | "button" | "bar";
+}
+
+type Breakpoint = "compact" | "medium" | "expanded";
+
+export const SearchAnchor: Component<SearchAnchorProps> = (props) => {
+  const createMinWidth = (value: number) =>
+    createMediaQuery(`only screen and (min-width: ${value}px)`);
+
+  const isMedium = createMinWidth(600);
+  const isExpanded = createMinWidth(840);
+  const breakpoint = createMemo<Breakpoint>(() => {
+    if(isExpanded()) return "expanded";
+    if(isMedium()) return "medium";
+    return "compact";
+  });
+
+  return (
+    <Switch>
+      <Match when={breakpoint() === "compact"}>
+        <SearchIcon />
+      </Match>
+      <Match when={breakpoint() === "medium"}>
+        <SearchButton />
+      </Match>
+      <Match when={breakpoint() === "expanded"}>
+        <SearchBar />
+      </Match>
+    </Switch>
+  );
+}
+```
+
+Let's update our `index.ts` file to export all new components:
+```diff lang="ts" title="components/search/index.ts"
+export * from "./search";
++export * from "./search-icon";
++export * from "./search-button";
++export * from "./search-bar";
++export * from "./search-anchor";
+```
+
+
+
+### Using the component
+
+All that's left to do now is just to use our component. Let's add it to our `Header` component:
+
+```diff lang="ts" title="components/Header.astro"
+---
++import { Search, SearchAnchor } from "./search";
+
+interface Props {}
+---
+
+<header>
++  <Search client:load>
++    <SearchAnchor />
++  </Search>
+</header>
+```
 
 ## Highlighting
 
@@ -128,7 +382,7 @@ If you are not happy with the default highlight styles (which are quite nice!), 
     class="not-content"
     href="https://docs.astro.build/en/guides/styling/#global-styles"
     target="_blank">
-      <ReadMoreIcon slot="leading" />
+      <ReadMoreIcon slot="leading" width={18} height={18} />
       <>Learn more</>
   </Button>
 </Aside>
