--- a/app/src/content/blog/test.mdx
+++ b/app/src/content/blog/test.mdx
@@ -9,10 +9,22 @@ createdAt: 2024-05-15
 ---
 
 import { Aside } from "../../components/aside";
+import { Button } from "../../components/button";
+
+import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
 
 <Aside variant="caution">
-  This blog post is **A TEST POST**. It contains nonsense.
+  <>This is a **TEST POST** it exists purely for testing purposes.</>
+  <Button
+    slot="action"
+    variant="error"
+    class="not-content"
+    href="/blog">
+      <ArrowBackIcon slot="leading" width={18} height={18} />
+      <>Go back</>
+  </Button>
 </Aside>
+
 
 # Heading 1
 ## Heading 2
