--- a/app/src/content/blog/material-to-solid.mdx
+++ b/app/src/content/blog/material-to-solid.mdx
@@ -10,7 +10,6 @@ createdAt: 2024-05-18
 
 import { Aside } from "../../components/aside";
 import { Button } from "../../components/button";
-
 import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
 
 <Aside variant="caution">
@@ -24,3 +23,5 @@ import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
       <>Go back</>
   </Button>
 </Aside>
+
+## Showcase
