--- a/app/src/content/blog/astro-pagefind-solidjs.mdx
+++ b/app/src/content/blog/astro-pagefind-solidjs.mdx
@@ -10,7 +10,7 @@ createdAt: 2024-05-18 # Don't change! It's an actual creation date!
 ---
 
 import { Aside } from "../../components/aside";
-import { Button } from "../../components/button";
+import { Button } from "../../components/primitives/button";
 
 import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
 import ReadMoreIcon from "~icons/material-symbols-rounded/read-more:outlined";
@@ -472,3 +472,4 @@ And that's it! Now Pagefind will run right after your site has been built. Try i
 ```bash
 yarn build
 ```
+../../components/primitives/button
