--- a/app/src/content/blog/material-to-solid.mdx
+++ b/app/src/content/blog/material-to-solid.mdx
@@ -9,7 +9,7 @@ createdAt: 2024-05-18
 ---
 
 import { Aside } from "../../components/aside";
-import { Button } from "../../components/button";
+import { Button } from "../../components/primitives/button";
 import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
 
 <Aside variant="caution">
@@ -25,3 +25,4 @@ import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
 </Aside>
 
 ## Showcase
+../../components/primitives/button
