--- a/app/src/content/blog/test.mdx
+++ b/app/src/content/blog/test.mdx
@@ -9,7 +9,7 @@ createdAt: 2024-05-15
 ---
 
 import { Aside } from "../../components/aside";
-import { Button } from "../../components/button";
+import { Button } from "../../components/primitives/button";
 
 import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
 
@@ -155,3 +155,4 @@ const className = clsx(
   }
 </style>
 ```
+../../components/primitives/button
