--- a/app/src/content/blog/astro-pagefind-solidjs.mdx
+++ b/app/src/content/blog/astro-pagefind-solidjs.mdx
@@ -19,6 +19,7 @@ import ReadMoreIcon from "~icons/material-symbols-rounded/read-more:outlined";
   <>This blog post is **WORK IN PROGRESS**. It may contain unfinished and inaccurate content.</>
   <Button
     slot="action"
+    data-navigate-back
     variant="filled"
     class="not-content"
     href="/blog">
