--- a/app/src/content/blog/material-to-solid.mdx
+++ b/app/src/content/blog/material-to-solid.mdx
@@ -1,5 +1,9 @@
 ---
 title: Bringing Material You to SolidJS
+description: Eiusmod sint incididunt ea mollit cupidatat ullamco mollit labore laborum ea sit consectetur.
+cover:
+  image:
+    src: ../../assets/images/covers/abstract_dark.jpg
 authors:
   - id: deminearchiver
     name: deminearchiver
