--- a/app/src/content/blog/test.mdx
+++ b/app/src/content/blog/test.mdx
@@ -1,11 +1,12 @@
 ---
+visibility: development
 title: Test Post
 authors:
   - id: deminearchiver
     name: deminearchiver
     avatar:
       src: ../../assets/images/avatars/deminearchiver.png
-createdAt: 2024-05-15
+createdAt: 2024-02-01
 ---
 
 import { Aside } from "../../components/aside";
