--- a/app/src/content/blog/test.mdx
+++ b/app/src/content/blog/test.mdx
@@ -9,7 +9,7 @@ authors:
 createdAt: 2024-02-01
 ---
 
-import { Aside } from "../../components/aside";
+import { Aside } from "../../components/content/aside";
 import { Button } from "../../components/primitives/button";
 
 import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
