--- a/app/src/content/blog/material-to-solid.mdx
+++ b/app/src/content/blog/material-to-solid.mdx
@@ -11,7 +11,7 @@ authors:
 createdAt: 2024-05-25 # DO NOT CHANGE ANYMORE! Started work on the post 2024-05-25
 ---
 
-import { Aside } from "../../components/aside";
+import { Aside } from "../../components/content/aside";
 import { Button } from "../../components/primitives/button";
 import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
 
