--- a/app/src/content/showcase/webapis.mdx
+++ b/app/src/content/showcase/webapis.mdx
@@ -1,6 +1,5 @@
 ---
-hide: production
-title: Material 3 for Solid
+title: Web APIs
 cover:
   src: ../../assets/images/covers/abstract_dark.jpg
 ---
