--- a/app/src/content/blog/astro-pagefind-solidjs.mdx
+++ b/app/src/content/blog/astro-pagefind-solidjs.mdx
@@ -1,11 +1,7 @@
 ---
 title: Astro + Pagefind + Solid = 🤯
 description: Build a search UI for your Astro site using Pagefind and SolidJS
-authors:
-  - id: deminearchiver
-    name: deminearchiver
-    avatar:
-      src: ../../assets/images/avatars/deminearchiver.png
+authors: [deminearchiver]
 createdAt: 2024-05-18 # Don't change! It's an actual creation date!
 ---
 
