--- a/app/src/content/blog/material-to-solid.mdx
+++ b/app/src/content/blog/material-to-solid.mdx
@@ -3,12 +3,12 @@ title: Bringing Material You to SolidJS
 description: Recreating Material You components in SolidJS, styling with Vanilla Extract.
 cover:
   src: ../../assets/images/covers/material-to-solid.png
-authors:
-  - id: deminearchiver
-    name: deminearchiver
-    avatar:
-      src: ../../assets/images/avatars/deminearchiver.png
+authors: [deminearchiver]
 createdAt: 2024-05-25 # DO NOT CHANGE ANYMORE! Started work on the post 2024-05-25
+tags:
+  - materialDesign
+  - solidJs
+  - vanillaExtract
 ---
 
 import { Aside } from "../../components/content/aside";
