--- a/app/src/content/blog/test.mdx
+++ b/app/src/content/blog/test.mdx
@@ -1,11 +1,7 @@
 ---
 hide: production
 title: Test Post
-authors:
-  - id: deminearchiver
-    name: deminearchiver
-    avatar:
-      src: ../../assets/images/avatars/deminearchiver.png
+authors: [deminearchiver]
 createdAt: 2024-02-01
 ---
 
