--- a/app/src/content/blog/website-devlog-1.mdx
+++ b/app/src/content/blog/website-devlog-1.mdx
@@ -2,11 +2,7 @@
 hide: production
 title: "Website Devlog #1: the beginning"
 description: Introduction to my new "Website Devlog" series
-authors:
-  - id: deminearchiver
-    name: deminearchiver
-    avatar:
-      src: ../../assets/images/avatars/deminearchiver.png
+authors: [deminearchiver]
 createdAt: 2024-05-23
 ---
 
