--- a/app/src/content/blog/material-you-solid/getting-started.mdx
+++ b/app/src/content/blog/material-you-solid/getting-started.mdx
@@ -1,8 +1,8 @@
 ---
-title: Bringing Material You to SolidJS
+title: "Bringing Material You in SolidJS #0 — Getting started"
 description: Recreating Material You components in SolidJS, styling with Vanilla Extract.
 cover:
-  src: ../../assets/images/covers/material-to-solid.png
+  src: ../../../assets/images/covers/material-to-solid.png
 authors: [deminearchiver]
 createdAt: 2024-05-25 # DO NOT CHANGE ANYMORE! Started work on the post 2024-05-25
 tags:
@@ -11,8 +11,8 @@ tags:
   - vanillaExtract
 ---
 
-import { Aside } from "../../components/content/aside";
-import { Button } from "../../components/primitives/button";
+import { Aside } from "../../../components/content/aside";
+import { Button } from "../../../components/primitives/button";
 import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
 
 import DragClickIcon from "~icons/material-symbols-rounded/drag-click:outlined";
